2008-12-16 17:23-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: Changes to initialize bounds in
	NSCustomView.

2008-12-16 16:41-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSView.m: Add back in matrix initialization.

2008-12-16  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-draggingUpated:): Scroll during dragging
	if the mouse pointer is close to the border of the view's visible
	rectangle.

	* Source/GSDragView.m (-handleEventDuringDragging:): Periodically
	send -draggingUpdated: messages to the dragging destination.

2008-12-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: Fix problem failing to recognise path extension
	where the role is blank.

2008-12-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCell.m (-setImage:): Call super implementation to
	make sure the button gets redrawn.
	* Source/NSWindow.m (-setContentView:): Don't do anything when
	setting the same view again.

2008-12-16 13:58-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: Make the log into debug in awakeFromNib 
	* Source/NSApplication.m: Allow modal to end multiple times, per spec
	there is no exception for doing this.
	* Source/NSPasteboard.m: Allow multiple threads in pasteboard
	communication.

2008-12-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m (-drawRepresentation:inRect:,
	-lockFocusOnRepresentation:): Draw the background colour even when
	it is the clear colour. (Fixes issue on xlib backend)

2008-12-15 21:29-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Images/common_ToolbarCustomizeToolbarItem.tiff
	* Images/GNUmakefile: Add new image for toolbar customization.

2008-12-15 19:49-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: remove extraneous awakeFromNib call in
	nibInstantiateWithOwner:topLevelObjects:.

2008-12-15 18:37-EST Gregory John Casamento <greg_casamento@yahoo.com>
